--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <H1>Box Model</H1>
+    <h2>Padding</h2>
 <P>The div on the left shows no padding,the div on the right shaws a 2px padding</P>
 <div id="nopadding">Some text.</div>
 <div id="padding">Some text.</div>
@@ -14,5 +15,22 @@
 <div id="bottom padding">Bottom Padding</div>
 <div id="left padding">Left padding</div>
 <div id="mixed padding">Mixed Padding</div>
+<h2>Borders</h2>
+<p>The div on the left shows no border,the div on the right shows a 3px dotted border</p>
+
+<div id="noBorder">Some Text</div>
+<div id="wavydottedBorder">Some Text</div>
+
+
+<p>There are many different styles of border. There are 9 we will  discuss here</p>
+<div id="dottedborder">Some Text</div>
+<div id="dashedborder">Some Text</div>
+<div id="solidborder">Some Text</div>
+<div id="doubleborder">Some Text</div>
+<div id="grooveborder">Some Text</div>
+<div id="ridgeborder">Some Text</div>
+<div id="insetborder">Some Text</div>
+<div id="outsetborder">Some Text</div>
+<div id="mixedborder">Some Text</div>
 </body>
 </html>
