--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div id="wavydottedBorder">Some Text</div>
 
 
-<p>There are many different styles of border. There are 9 we will  discuss here</p>
+<p>There are many different styles of border.There are 9 we will discuss here</p>
 <div id="dottedborder">Some Text</div>
 <div id="dashedborder">Some Text</div>
 <div id="solidborder">Some Text</div>
@@ -32,5 +32,22 @@
 <div id="insetborder">Some Text</div>
 <div id="outsetborder">Some Text</div>
 <div id="mixedborder">Some Text</div>
+
+<h2>Margins</h2>
+<p>Margins are the space between elements.
+They follow the same basic principles padding.</p>
+
+
+<div class="row1">Some Text</div>
+<div class="row1">Some Text</div>
+<div class="row1">Some Text</div>
+<div class='row2'>Some Text</div>
+<div class='row2'>Some Text</div>
+<div class='row2'>Some Text</div>
+
+<div id="center">Some Text</div>
+<div id="perLeftMargin">Some Text</div>
+<div id="perRightMargin">Some Text</div>
+
 </body>
 </html>
