--- a/index.html
+++ b/index.html
@@ -49,5 +49,36 @@ They follow the same basic principles padding.</p>
 <div id="perLeftMargin">Some Text</div>
 <div id="perRightMargin">Some Text</div>
 
+<h2>Putting it all together!!</h2>
+
+<p>Classes are used for multiple elements with same styles.
+    we can apply multiple classes to each element.We CANNOT apply multiple IDS,
+    which is why classes are preferred to ids.</p>
+
+<div class="defaultpadding defaultBorder">Some Text</div>
+<div class="defaultpadding defaultMargin">Some Text</div>
+<div class="defaultpadding defaultBorder">Some Text</div>
+<br>
+<div class="defaultpadding">Some Text</div>
+<div class="defaultpadding defaultBorder defaultMargin">Some Text</div>
+<div class="defaultpadding">Some Text</div>
+
+<p>we can also use CSS to target specific elements that are contained inside other elements</p>
+
+<section>
+    <h3>Some Text Header</h3>
+<header>
+<h3 class="defaultBorder">Some Text smaller Header</h3>
+</header>
+<article>
+    <p>A paragraph inside an Article</p>
+</article>
+<p>Another Paragraph</p>
+</section>
+
+<br>
+<br>
+<br>
+
 </body>
 </html>
